# sitt

./: Cargo.toml  README.md
.github/workflows/: build.yaml
api/: Cargo.toml  http_api.yaml  lib.rs  main.rs  swagger.yaml
api/handlers/: mod.rs  project_handler.rs  time_track_handler.rs  user_handler.rs
api/handlers/dtos/: common_dtos.rs  project_dtos.rs  time_track_dtos.rs  user_dtos.rs
api/handlers/validation/: mod.rs  user_validation.rs  uuid_validation.rs
api/infrastructure/: database.rs  project_repository.rs  time_track_repository.rs  user_repository.rs  utils.rs
api/models/: mod.rs  project_model.rs  time_track_model.rs  user_model.rs
api/services/: mod.rs  project_service.rs  time_track_service.rs  user_service.rs
cli/: Cargo.toml  config.rs  main.rs  project.rs  sitt_client.rs  timetrack.rs  user.rs  utils.rs
src/: main.rs
src/handlers/: mod.rs  project_handler.rs  time_track_handler.rs  track_handler.rs  user_handler.rs
src/handlers/dtos/: common_dtos.rs  mod.rs  project_dtos.rs  time_track_dtos.rs  user_dtos.rs
src/handlers/validation/: mod.rs  user_validation.rs  uuid_validation.rs  valid_uuid.rs
src/infrastructure/: database.rs  mod.rs  project_repository.rs  time_track_repository.rs  user_repository.rs
src/models/: mod.rs  project_model.rs  time_track_model.rs  user_model.rs
src/routes/: mod.rs  project_routes.rs
src/services/: mod.rs  project_service.rs  time_track_service.rs  user_service.rs
