[package]
name = "sitt_api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.36.0", features = ["behavior-version-latest"] }
chrono = { version = "0.4.38", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }
